Adjust Windows icon size,fix runner exec path bug.